[gd_scene load_steps=5 format=3 uid="uid://crlyso6fn5m4a"]

[ext_resource type="Script" uid="uid://cpy78cbbba2nj" path="res://slicer.gd" id="1_0lqn7"]
[ext_resource type="Texture2D" uid="uid://o7axi2y83767" path="res://cutting_station.png" id="2_0lqn7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s70od"]
size = Vector2(22, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a70c"]
size = Vector2(128, 128)

[node name="Slicer" type="Area2D"]
script = ExtResource("1_0lqn7")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_0lqn7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 58)
shape = SubResource("RectangleShape2D_s70od")

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_5a70c")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -28.0
offset_top = -46.0
offset_right = 26.0
offset_bottom = -19.0

[node name="RecipeDisplay" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ingredients" type="VBoxContainer" parent="RecipeDisplay"]
layout_mode = 2

[node name="Ingredient1" type="Label" parent="RecipeDisplay/Ingredients"]
layout_mode = 2

[node name="Ingredient2" type="Label" parent="RecipeDisplay/Ingredients"]
layout_mode = 2

[node name="Ingredient3" type="Label" parent="RecipeDisplay/Ingredients"]
layout_mode = 2

[node name="Product" type="Label" parent="RecipeDisplay"]
layout_mode = 2
